--- a/index.html
+++ b/index.html
@@ -10,23 +10,34 @@
   </head>
   <body>
     <form id="form">
-      <label>Valor1:</label>
-      <input type="text" id="valor1"/>
+      <label>R1:</label>
+      <input type="text" id="R1"/>
       </br>
-      <label>Valor2:</label>
-      <input type="text" id="valor2"/>
+      <label>R2:</label>
+      <input type="text" id="R2"/>
       <br>
-      <label>Valor3:</label>
-      <input type="text" id="valor3"/>
+      <label>R3:</label>
+      <input type="text" id="R3"/>
       <br><br>
-      <label>Voltaje1:</label>
-      <input type="text" id="voltaje1"/>
+
+      <label>C1:</label>
+      <input type="text" id="C1"/>
+      </br>
+      <label>C2:</label>
+      <input type="text" id="C2"/>
       <br>
-      <label>Voltaje2:</label>
-      <input type="text" id="voltaje2"/>
+      <label>C3:</label>
+      <input type="text" id="C3"/>
+      <br><br>
+
+      <label>V1:</label>
+      <input type="text" id="v1"/>
       <br>
-      <label>Voltaje3:</label>
-      <input type="text" id="voltaje3"/>
+      <label>V2:</label>
+      <input type="text" id="v2"/>
+      <br>
+      <label>V3:</label>
+      <input type="text" id="v3"/>
       <br><br>
       <label id="opcion">Operacion</label>
       <select name="operacion" id="operacion">
@@ -47,8 +58,36 @@
           <br><br>
       <input type="submit" value="Calcular" id="calcular">
       <br><br>
-      <label>Resultado:</label>
-      <label for="" id="resultado-label"></label>
+      <label>R1:</label>
+      <label for="" id="R1-label"></label>
+      <br>
+      <label>R2:</label>
+      <label for="" id="R2-label"></label>
+      <br>
+      <label>R3:</label>
+      <label for="" id="R3-label"></label>
+      <br><br>
+
+      <label>VR1:</label>
+      <label for="" id="VR1-label"></label>
+      <br>
+      <label>VR2:</label>
+      <label for="" id="VR2-label"></label>
+      <br>
+      <label>VR3:</label>
+      <label for="" id="VR3-label"></label>
+      <br><br>
+
+      <label>C1:</label>
+      <label for="" id="C1-label"></label>
+      <br>
+      <label>C2:</label>
+      <label for="" id="C2-label"></label>
+      <br>
+      <label>C3:</label>
+      <label for="" id="C3-label"></label>
+      <br><br>
+      
     </form>
     <script src="script.js"></script>
   </body>
