--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
           <option>Potencia R2</option>
 
           <option>Potencia R3</option>
+
+
           
           </select>
           <br><br>
@@ -83,6 +85,9 @@
 
       <label>Ceq:</label>
       <label for="" id="Ceq-label"></label>
+      <br><br>
+      <label>Carga Ceq:</label>
+      <label for="" id="CargaCeq-label"></label>
       <br><br>
 
       <label>VR1:</label>
