--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 
           <option>Potencia R3</option>
 
+          <option>Potencia RT</option>
+
 
           
           </select>
@@ -108,6 +110,9 @@
       <br>
       <label>PR3:</label>
       <label for="" id="PR3-label"></label>
+      <br>
+      <label>PRT:</label>
+      <label for="" id="PRT-label"></label>
       <br><br>
       
     </form>
